--- a/src/App.css
+++ b/src/App.css
@@ -58,4 +58,5 @@
     width: 100%;
     height: 100%;
     background: radial-gradient(circle, rgba(162, 89, 255, 0.1), transparent);
+     /* background: radial-gradient(circle, rgba(150, 0, 100, 0.8), transparent); */
 }
