--- a/src/App.css
+++ b/src/App.css
@@ -6,38 +6,8 @@
     height: 100%;
     background: linear-gradient(
             to right,
-            rgba(255, 255, 255, 0.1) 1px,
-            transparent 1px
-        ),
-        linear-gradient(
-            to bottom,
-            rgba(255, 255, 255, 0.1) 1px,
-            transparent 1px
-        );
-    background-size: 50px 50px;
-    pointer-events: none;
-    z-index: -1;
-}
-
-.grid-background::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.9));
-} */
-.grid-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-            to right,
             rgba(162, 89, 255, 0.05) 1px,
-            /* Softer Neon Purple Grid */ transparent 1px
+            transparent 1px
         ),
         linear-gradient(
             to bottom,
@@ -47,10 +17,10 @@
     background-size: 60px 60px;
     pointer-events: none;
     z-index: -1;
-}
+} */
 
 /* Add a soft radial glow */
-.grid-background::before {
+/* .grid-background::before {
     content: '';
     position: absolute;
     top: 0;
@@ -58,5 +28,5 @@
     width: 100%;
     height: 100%;
     background: radial-gradient(circle, rgba(162, 89, 255, 0.1), transparent);
-     /* background: radial-gradient(circle, rgba(150, 0, 100, 0.8), transparent); */
-}
+   
+} */
