Create a new component ShowcaseSection

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-.grid-background {
+/* .grid-background {
     background: none !important;
-}
+} */
+
+
 
 /* .grid-background {
     position: fixed;
